# zmax-datasets

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yaml
configs/: datasets.yaml  donders_2018_config.yaml  donders_2022.yaml  donders_2022_config.yaml  logging.yaml
configs/datasets/: ppg_processed_datasets.yaml  processed_datasets.yaml  raw_datasets.yaml
configs/pipelines/: accelerometer.yaml  eeg.yaml  empatica_ppg.yaml  empatica_ppg_artifact.yaml  ppg.yaml  ppg_artifact.yaml  scale_eeg.yaml  wearanize_plus.yaml  zmax_datasets.yaml
data/: donders_2022.py
notebooks/: accelerometer.ipynb  eeg.ipynb  playground.ipynb  ppg.ipynb  wearanize_plus.ipynb
scripts/: evaluate_arousal_detection.py
sleep-sensor-analysis/: pyproject.toml  requirements.txt
tests/: test_placeholder.py
tests/test_datasets/: test_donders_2022.py  test_utils.py
tests/test_exports/: test_yasa.py
zmax_datasets/: settings.py
zmax_datasets/datasets/: base.py  donders_2018.py  donders_2022.py  exceptions.py  karolinska.py  qs.py  usleep.py  utils.py  wearanize_plus.py  zmax.py  zmax_dataset
zmax_datasets/datasets/qs/: qs.py
zmax_datasets/exports/: artifact.py  base.py  enums.py  ibi.py  usleep.py  utils.py  yasa.py
zmax_datasets/processing/: artifact_detection.py  eeg_usability.py  ibi.py  sleep_scoring.py
zmax_datasets/scripts/: evaluate_arousal_detection.py  export.py  process.py
zmax_datasets/sources/zmax/: enums.py  utils.py
zmax_datasets/transforms/: eeg.py  helpers.py  ppg.py  resample.py
zmax_datasets/utils/: data.py  exceptions.py  helpers.py  logger.py  transforms.py
zmax_real_time/: settings.py  utils.py
zmax_real_time/datasets/: donders_2022.py  utils.py
zmax_real_time/utils/: logger.py
