[tool.poetry]
name = "zmax-datasets"
version = "0.1.0"
description = ""
authors = ["Ali Saberi <ali.saberi96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "~1.23"
pandas = "^2.2.2"
mne = "^1.7.1"
h5py = "^3.11.0"
scipy = "^1.14.0"
typing-extensions = "^4.12.2"
jupyterlab = {version = "^4.2.4", optional = true}
yasa = {version = "^0.6.5", optional = true}
setuptools = {version = "^74.1.2", optional = true}
ipykernel = {version = "^6.29.5", optional = true}
tqdm = {version = "^4.66.5", optional = true}
slumber = {path = "../slumber", develop = true}
plotly = {version = "^5.24.1", optional = true}
ipywidgets = {version = "^8.1.5", optional = true}
nbformat = {version = "^5.10.4", optional = true}
pyarrow = "^19.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.extras]
yasa = ["yasa", "setuptools", "tqdm"]
notebook = ["jupyterlab", "ipykernel", "plotly", "ipywidgets", "nbformat"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
