[tool.poetry]
name = "sleep-sensor-analysis"
version = "0.1.0"
description = "A systematic evaluation framework for sleep monitoring sensors and their combinations"
authors = ["Ali Saberi <ali.saberi96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "~1.23"
pandas = "^2.2.2"
scipy = "1.8.1"
zmax_datasets = {git = "https://github.com/alitsaberi/zmax-datasets.git"}  # Base package
plotly = "^5.24.1"
ipywidgets = "^8.1.5"
jupyterlab = "^4.2.4"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
